Fix overlap of loading animation and view

--- a/app/css/animations.css
+++ b/app/css/animations.css
@@ -15,22 +15,20 @@
 
 .animate-view.ng-enter {
   opacity: 0;
-  z-index:100;
 }
 
 .animate-view.ng-enter.ng-enter-active {
   opacity: 1;
-  z-index:101;
 }
 .animate-view.ng-leave {
   opacity: 1;
-  z-index:101;
+  z-index:0;
   transform: rotateZ(360deg) translateX(0) scale(1,1);
   -webkit-transform: rotateZ(360deg) translateX(0) scale(1,1);
 }
 .animate-view.ng-leave-active {
   opacity: 0;
-  z-index:100;
+  z-index:-1;
   transform: rotateZ(0deg) translateX(-50%) scale(0, 0);
   -webkit-transform: rotateZ(0deg) translateX(-50%) scale(0,0);
 }
